Migrate test to jdk8